--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -10,12 +10,11 @@ List:
     <ul>
     {% for book in books %}
     <li>
-    {{book.title}} {{book.authorId}}
+    {{book.title}} {{book.author.name}} {{book.author.surname}}
     <a href="{{path('book_edit',{id: book.id}) }}"> EDIT </a>
     <form action="{{path('book_delete',{id: book.id}) }}" method="POST"> 
     <button type="sumbit"> DELETE </button>
     </form> 
-
     </li>
     {% endfor %}
     </ul>
