--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -5,8 +5,19 @@
 {% block body %}
 
     <h1>Author in Library</h1>
+    List  order by:
+    <form action="" method="GET">
+        <select name="sort">
+            <option value="default"> default </option>
+            <option value="name_az" {% if sortBy=='name_az' %} selected {% endif %} >name </option>
+            <option value="name_za" {% if sortBy=='name_za' %} selected {% endif %}> name reverse </option>
+            <option value="surname_az" {% if sortBy=='surname_az' %} selected {% endif %}>surname </option>
+            <option value="surname_za" {% if sortBy=='surname_za' %} selected {% endif %}>surname reverse  </option>
+        </select>
+    <button type="sumbit">SORT IT! </button> 
+    </form>
+    <a href="{{path('author_index')}}">CLEAR </a>
 
-List:
     <ul>
     {% for author in authors %}
     <li>{{author.name}} {{author.surname}}
