--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -8,6 +8,9 @@
         {% block javascripts %}{% endblock %}
     </head>
     <body>
+    {% if errors is defined and errors|length > 0 %}
+        {% include 'errors/validation.html.twig' %}
+    {% endif %}
         {% block body %}{% endblock %}
     </body>
 </html>
