--- a/templates/book/index.html.twig
+++ b/templates/book/index.html.twig
@@ -9,17 +9,16 @@
     List filter by:
         <form action="{{path('book_index')}}" method="GET">
             <select name="author_id">
-             <option value="0"> View All </option>
-            {% for author in authors %}
-            
-            <option value="{{author.id}}"  {% if author_id == author.id %} selected {% endif %}>
-            {{author.name}} {{author.surname}}</option>
-            {% endfor %}
+                <option value="0"> View All </option>
+                {% for author in authors %}
+                <option value="{{author.id}}" {% if author_id == author.id %} selected {% endif %}>
+                {{author.name}} {{author.surname}}
+                </option>
+                {% endfor %}
             </select>
         <button type="sumbit">FILTER IT! </button> 
         </form>
     <a href="{{path('book_index')}}"> CLEAR </a>
-
 
     <ul>
     {% for book in books %}
