--- a/templates/author/create.html.twig
+++ b/templates/author/create.html.twig
@@ -9,7 +9,7 @@
         Name:  <input type="text" name="author_name" value="{{aname}}"> 
         Surname:<input type="text" name="author_surname" value="{{asurname}}">
         <button type="submit"> Add new Author! </button>
-        <input type="hidden" name="token" value=""{{ csrf_token('create_author_bla')}}>
+        <input type="hidden" name="token" value="{{ csrf_token('create_author_bla') }}">
     </form>
 
 {% endblock %}
