--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,6 +3,11 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
+
+        <link href="http://localhost/biblioteka/public/build/app.css" rel="stylesheet"/>
+        <script src="http://localhost/biblioteka/public/build/app.js"> </script>
+
+
         {% block stylesheets %}{% endblock %}
 
         {% block javascripts %}{% endblock %}
