--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,26 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+	<head>
+		<meta charset="UTF-8">
+		<title>
+			{% block title %}Welcome!
+			{% endblock %}
+		</title>
 
-        <link href="http://localhost/biblioteka/public/build/app.css" rel="stylesheet"/>
-        <script src="http://localhost/biblioteka/public/build/app.js"> </script>
+		<link href="http://localhost/biblioteka/public/build/app.css" rel="stylesheet"/>
+		<script src="http://localhost/biblioteka/public/build/app.js" defer></script>
 
+		<!-- include summernote css/js -->
+		<link href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css" rel="stylesheet"> {% block stylesheets %}{% endblock %}{% block javascripts %}{% endblock %}
+		</head>
+		<body>
+			{% if errors is defined and errors|length > 0 %}
+				{% include 'message/validation.html.twig' %}
+			{% endif %}
 
-        {% block stylesheets %}{% endblock %}
+			{% if success is defined and success|length > 0 %}
+				{% include 'message/success.html.twig' %}
+			{% endif %}
 
-        {% block javascripts %}{% endblock %}
-    </head>
-    <body>
-    {% if errors is defined and errors|length > 0 %}
-        {% include 'message/validation.html.twig' %}
-    {% endif %}
-
-     {% if success is defined and success|length > 0 %}
-        {% include 'message/success.html.twig' %}
-    {% endif %}
-    
-        {% block body %}{% endblock %}
-    </body>
-</html>
+			{% block body %}{% endblock %}
+		</body>
+	</html>
