--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -2,3 +2,26 @@
 body {
     background-color: lightgray;
 }
+.list-group-item{
+    &__line{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        span{
+            font-size: 24px;
+            margin-top: 7px;
+        }
+        &__buttons{
+            display: flex;
+            .btn {
+                margin: 7px;
+            }
+        }
+    }
+}
+.form-check-input.custom{
+    margin-left: 15px;
+}
+.form-check.custom{
+    padding-left: 0;
+}
