--- a/templates/author/index.html.twig
+++ b/templates/author/index.html.twig
@@ -1,36 +1,72 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Author list{% endblock %}
+{% block title %}Author list
+{% endblock %}
 
 {% block body %}
 
-    <h1>Author in Library</h1>
-    List  order by:
-    <form action="{{path('author_index')}}" method="GET">
-        <select name="sort">
-            <option value="default"> default </option>
-            <option value="name_az" {% if sortBy=='name_az' %} selected {% endif %} >name </option>
-            <option value="name_za" {% if sortBy=='name_za' %} selected {% endif %}> name reverse </option>
-            <option value="surname_az" {% if sortBy=='surname_az' %} selected {% endif %}>surname </option>
-            <option value="surname_za" {% if sortBy=='surname_za' %} selected {% endif %}>surname reverse  </option>
-        </select>
-    <button type="sumbit">SORT IT! </button> 
-    </form>
-    <a href="{{path('author_index')}}"> CLEAR </a>
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-md-8">
+				<div class="card">
+					<div class="card-header">
+						<h1>Author in Library</h1>
+					</div>
+					<div class="card-body">
+						List  order by:
+						<form action="{{path('author_index')}}" method="GET">
+							<div class="form-group">
+								<select name="sort" class="form-control">
+									<option value="default">default</option>
+									<option value="name_az" {% if sortBy=='name_az' %} selected {% endif %}>name</option>
+									<option value="name_za" {% if sortBy=='name_za' %} selected {% endif %}>name reverse</option>
+									<option value="surname_az" {% if sortBy=='surname_az' %} selected {% endif %}>surname</option>
+									<option value="surname_za" {% if sortBy=='surname_za' %} selected {% endif %}>surname reverse</option>
+								</select>
+							</div>
 
-    <ul>
-    {% for author in authors %}
-    <li>{{author.name}} {{author.surname}}
-    <a href="{{path('author_edit',{id: author.id}) }}"> EDIT </a>
-    <form action="{{path('author_delete',{id: author.id}) }}" method="POST"> 
-    <button type="sumbit"> DELETE </button>
-    </form> 
-        Autoriaus knygos: <br>
-        {% for  book in  author.books  %}
-        {{ book.title }} <br>
-        {% endfor %}
+							<button type="sumbit" class="btn btn-outline-dark">SORT IT!</button>
+							<a href="{{path('author_index')}}" class="clear">
+								CLEAR
+							</a>
 
-    </li>
-    {% endfor %}
-    </ul>
-{% endblock %}
+
+						</form>
+
+						<ul class="list-group list-group-flush">
+							{% for author in authors %}
+								<li class="list-group-item"></li>
+								<div class="list-group-item__line">
+									<span>
+										{{author.name}}
+										{{author.surname}}
+									</span>
+									<div class="list-group-item__line__buttons">
+
+										<a href="{{path('author_edit',{id: author.id}) }}" class="btn btn-primary">
+											EDIT</a>
+
+										<form action="{{path('author_delete',{id: author.id}) }}" method="POST">
+											<button type="sumbit" class="btn btn-outline-danger">
+												DELETE</button>
+										</form>
+									</div>
+								</div>
+								<h5>Autoriaus knygos
+								</h5>
+								<ul class="list-group list-group-flush">
+									{% for  book in  author.books  %}
+										<li class="list-group-item">
+											{{ book.title }}
+										</li>
+									{% endfor %}
+								</ul>
+							</li>
+						{% endfor %}
+					</ul>
+
+				</div>
+			</div>
+		</div>
+	</div>
+</div>{% endblock %}
