--- a/templates/book/create.html.twig
+++ b/templates/book/create.html.twig
@@ -1,21 +1,56 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Create new Book!{% endblock %}
+{% block title %}Create new Book!
+{% endblock %}
 
 {% block body %}
 
-    <h1>Create new Book ✅</h1>
-    <form action="{{path('book_store')}}" method="POST">
-        Title:  <input type="text" name="book_title"> 
-        ISBN:  <input type="text" name="book_isbn"> 
-        Pages:  <input type="text" name="book_pages"> 
-        About:  <textarea name="book_about" id="summernote"> </textarea>
-        <select name="book_author_id">
-        {% for author in authors %}
-        <option value="{{author.id}}">{{author.name}} {{author.surname}}</option>
-        {% endfor %}
-        </select>
-        <button type="submit"> Add new Book! </button>
-    </form>
+
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-md-8">
+				<div class="card">
+					<div class="card-header">
+						<h1>Create new Book ✅</h1>
+					</div>
+
+
+					<div class="card-body">
+						<form action="{{path('book_store')}}" method="POST">
+							<div class="form-group">
+								<label>Title</label>
+								<input type="text" name="book_title" class="form-control">
+							</div>
+							<div class="form-group">
+								<label>ISBN</label>
+								<input type="text" name="book_isbn" class="form-control">
+							</div>
+							<div class="form-group">
+								<label>Pages</label>
+								<input type="text" name="book_pages" class="form-control">
+							</div>
+                            <div class="form-group">
+							About:
+							<textarea name="book_about" id="summernote"></textarea>
+                            </div>
+							<div class="form-group" >
+								<select name="book_author_id" class="form-control">
+									{% for author in authors %}
+										<option value="{{author.id}}">{{author.name}}
+											{{author.surname}}</option>
+									{% endfor %}
+								</select>
+							</div>
+							<button type="submit" class="btn btn-outline-success">
+
+								Add new Book!
+							</button>
+						</form>
+
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 {% endblock %}
