--- a/templates/message/success.html.twig
+++ b/templates/message/success.html.twig
@@ -1,6 +1,13 @@
-<h3> Pranesimas</h3>
-<ul>
-{% for succes in success %}
-    <li> {{succes}} </li>
-{% endfor %}
-</ul>
+<div class="container">
+	<div class="row justify-content-center">
+		<div class="col-md-9">
+			<div class="alert">
+				<ul class="list-group">
+					{% for succes in success %}
+						<li class="list-group-item list-group-item-success">{{ succes }}</li>
+					{% endfor %}
+				</ul>
+			</div>
+		</div>
+	</div>
+</div>
