--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,21 +1,39 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Register
+{% endblock %}
 
 {% block body %}
-    {% for flashError in app.flashes('verify_email_error') %}
-        <div class="alert alert-danger" role="alert">{{ flashError }}</div>
-    {% endfor %}
+	{% for flashError in app.flashes('verify_email_error') %}
+		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
+	{% endfor %}
 
-    <h1>Register</h1>
+	<div class="container">
+		<div class="row justify-content-center">
+			<div class="col-md-8">
+				<div class="card">
+					<div class="card-header">
+						<h1>Register</h1>
+					</div>
+					<div class="card-body">
+						{{ form_start(registrationForm, {'attr': {'class': 'foo' }}) }}
+						<div class="form-group">
+							{{ form_row(registrationForm.email, {'attr': {'class': 'form-control' }}) }}
+						</div>
+						<div class="form-group">
 
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
-{% endblock %}
+							{{ form_row(registrationForm.plainPassword, { label: 'Password', 'attr': {'class': 'form-control' }}) }}
+						</div>
+						<div class="form-check custom">
+							{{ form_row(registrationForm.agreeTerms, {'attr': {'class': 'form-check-input custom' }}) }}
+						</div>
+
+						<button type="submit" class="btn btn btn-outline-primary">Register</button>
+						{{ form_end(registrationForm) }}
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>{% endblock %}
