--- a/templates/author/edit.html.twig
+++ b/templates/author/edit.html.twig
@@ -4,11 +4,32 @@
 
 {% block body %}
 
-    <h1>Edit Author✅</h1>
-    <form action="{{path('author_update' , {id: author.id})}}" method="POST">
-        Name:  <input type="text" name="author_name" value="{{author.name}}"> 
-        Surname:<input type="text" name="author_surname"  value="{{author.surname}}">
-        <button type="submit"> Edit! </button>
-    </form>
+ 
+   <div class="container">
+   <div class="row justify-content-center">
+       <div class="col-md-8">
+           <div class="card">
+               <div class="card-header">   <h1>Edit Author✅</h1></div>
+
+               <div class="card-body">
+                 <form action="{{path('author_update' , {id: author.id})}}" method="POST">
+                 <div class="form-group">
+                    <label>Name</label>
+                    <input type="text" name="author_name" value="{{author.name}}"  class="form-control">
+                </div>
+                 <div class="form-group">
+                    <label>Surname</label>
+                    <input type="text" name="author_surname"  value="{{author.surname}}" class="form-control">
+                </div>
+                    <button type="submit"  class="btn btn-outline-success"> Edit! </button>
+                </form>
+               </div>
+           </div>
+       </div>
+   </div>
+</div>
 
 {% endblock %}
+
+
+
