--- a/templates/book/edit.html.twig
+++ b/templates/book/edit.html.twig
@@ -4,20 +4,47 @@
 
 {% block body %}
 
-    <h1>Edit Book</h1>
-    <form action="{{path('book_update', {id: book.id})}}" method="POST">
-        Title:  <input type="text" name="book_title" value="{{book.title}}"> 
-        ISBN:  <input type="text" name="book_isbn" value="{{book.isbn}}"> 
-        Pages:  <input type="text" name="book_pages" value="{{book.pages}}"> 
-        About:  <textarea name="book_about" id="summernote"> {{book.about}} </textarea>
-        <select name="books_author">
-        {% for author in authors %}
-        <option value="{{author.id}}" {% if author.id == book.authorId %} selected {% endif %}>
-        {{author.name}} {{author.surname}}
-        </option>
-        {% endfor %}
-        </select>
+ 
 
-        <button type="submit"> Edit new Book! </button>
-    </form>
+<div class="container">
+   <div class="row justify-content-center">
+       <div class="col-md-8">
+           <div class="card">
+               <div class="card-header">    <h1>Edit Book</h1> </div>
+                    <div class="card-body">
+                        <form action="{{path('book_update', {id: book.id})}}" method="POST">
+                        <div class="form-group">
+                            <label>Title</label>
+                            <input type="text"  name="book_title" value="{{book.title}}" class="form-control">
+                        </div>
+                          <div class="form-group">
+                            <label>ISBN</label>
+                            <input type="text"  name="book_isbn" value="{{book.isbn}}" class="form-control">
+                        </div>
+                          <div class="form-group">
+                            <label>Pages</label>
+                            <input type="text" name="book_pages" value="{{book.pages}}" class="form-control">
+                        </div>
+                        <div class="form-group">
+                            About:  <textarea name="book_about" id="summernote"> {{book.about}} </textarea>
+                        </div>
+                        <div class="form-group">
+                           <select name="books_author" class="form-control">
+                            {% for author in authors %}
+                            <option value="{{author.id}}" {% if author.id == book.authorId %} selected {% endif %}>
+                            {{author.name}} {{author.surname}}
+                            </option>
+                            {% endfor %}
+                            </select>
+                        </div>
+                            
+
+                            <button type="submit" class="btn btn-outline-success"> Edit new Book! </button>
+                        </form>
+               </div>
+           </div>
+       </div>
+   </div>
+</div>
+
 {% endblock %}
