--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -36,7 +36,7 @@
 
 							<input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
 
-							<button class="btn btn-lg btn-primary" type="submit">
+							<button class="btn btn-lg btn-primary buttonas" type="submit">
 								Sign in
 							</button>
 						</form>
